developer/src/kmc/test/fixtures/invalid-projects/error_file_type_not_found__model_ts.kpj
<?xml version="1.0" encoding="utf-8"?>
<KeymanDeveloperProject>
  <Options>
    <BuildPath>$PROJECTPATH</BuildPath>
    <CompilerWarningsAsErrors>False</CompilerWarningsAsErrors>
    <WarnDeprecatedCode>False</WarnDeprecatedCode>
    <CheckFilenameConventions>False</CheckFilenameConventions>
    <ProjectType>lexicalmodel</ProjectType>
  </Options>
  <Files>
    <!-- ERROR_FileTypeNotFound (BuildModelInfo; .model.ts) -->
    <File>
      <ID>error_file_type_not_found_mdl_mdl_2</ID>
      <Filename>error_file_type_not_found__model_ts.kps</Filename>
      <Filepath>error_file_type_not_found__model_ts.kps</Filepath>
      <FileVersion></FileVersion>
      <FileType>.kps</FileType>
      <Details>
        <Name>error_file_type_not_found__model_ts</Name>
        <Copyright>Copyright (C) Keyman Team</Copyright>
      </Details>
    </File>
  </Files>
 </KeymanDeveloperProject>
